--- a/src/app/index.css
+++ b/src/app/index.css
@@ -6,6 +6,26 @@
  * Made By MaterializeCSS.com
  */
 
+.material-icons.md-18 { font-size: 18px; }
+.material-icons.md-24 { font-size: 24px; }
+.material-icons.md-36 { font-size: 36px; }
+.material-icons.md-48 { font-size: 48px; }
+
+.headerMenu {
+	background: linear-gradient(50deg, rgba(53,184,136,1), rgba(0,113,178,1));
+	overflow: hidden;
+}
+
+.cardPlayer {
+	background: linear-gradient(50deg, rgba(00,130,136,1), rgba(0,113,178,1));
+	overflow: hidden;
+}
+
+.cardTeam {
+	background: linear-gradient(50deg, rgba(229,115,115,1), rgba(198,40,40,1));
+	overflow: hidden;
+} 
+
 input[type=text].valid, input[type=text]:focus.valid, input[type=password].valid, input[type=password]:focus.valid, input[type=email].valid, input[type=email]:focus.valid, input[type=url].valid, 
 input[type=url]:focus.valid, input[type=time].valid, input[type=time]:focus.valid, input[type=date].valid, input[type=date]:focus.valid, input[type=datetime-local].valid, input[type=datetime-local]:focus.valid, 
 input[type=tel].valid, input[type=tel]:focus.valid, input[type=number].valid, input[type=number]:focus.valid, input[type=search].valid, input[type=search]:focus.valid, textarea.materialize-textarea.valid, textarea.materialize-textarea:focus.valid {
