--- a/src/app/modules/commons/users/config/mainConfig.html
+++ b/src/app/modules/commons/users/config/mainConfig.html
@@ -26,24 +26,24 @@
     <div class="row">
         <div class="col s12">
             <ul class="tabs" tabs>
-                <li class="tab col s2"><a href="#profile">{{'profile.tabs.profil' | translate }}</a></li>
-                <li class="tab col s2"><a href="#passwordUser">{{'profile.tabs.password' | translate }}</a></li>
-                <li class="tab col s2 disabled"><a href="#billing">{{'profile.tabs.billing' | translate }}</a></li>
+                <li class="tab col s2 disabled"><a href="#sharing">{{'profile.tabs.sharing' | translate }}</a></li>
+                <li class="tab col s2 disabled"><a href="#notification">{{'profile.tabs.notification' | translate }}</a></li>
+                <li class="tab col s2"><a href="#settings">{{'profile.tabs.settings' | translate }}</a></li>
             </ul>
         </div>
     
-        <!-- modify profil -->
-        <div id="profile" class="col s12 card">
-            <user-profil-data user="user" />
-        </div>    
-    
-        <!-- change password -->
-        <div id="passwordUser"  class="col s12 card">
-            <user-profil-pwd user="user" />
+        <!-- sharing -->
+        <div id="sharing"  class="col s12">
+            
         </div>
         
-        <!-- billing -->
-        <div id="billing"  class="col s12">
+        <!-- Notification -->
+        <div id="notification"  class="col s12">
+            
+        </div>
+        
+        <!-- settings -->
+        <div id="settings"  class="col s12">
             
         </div>
         
