--- a/src/app/components/directives/stats/hand/playerUse.html
+++ b/src/app/components/directives/stats/hand/playerUse.html
@@ -1,12 +1,14 @@
-<div class="card small light-blue lighten-1 blue-grey-text text-darken-2">
-    <div class="card-title center">
-        <span class="white-text"><h5><small>{{'stats.resumeTab.usePlayer' | translate }}</small></h5></span>
+<div class="card light-blue lighten-1 white-text">
+    <div class="card-title center cardStatTitle">
+        <span class="white-text title"><small>{{'stats.resumeTab.usePlayer' | translate }}</small></span>
     </div>
+    <!--
     <div class="card-image waves-effect waves-block waves-light">
         <img src="/assets/images/handball/usePlayer.jpeg">
     </div>                        
-
-    <div class="card-content light-blue lighten-3">
+    -->
+    
+    <div class="card-content white blue-grey-text text-darken-2">
         <div class="row center">
             <div class="col s4 "><h6>{{'stats.resumeTab.gamePlayed' | translate }}</h6></div>
             <div class="col s4 "><h6>{{'stats.resumeTab.holder' | translate }}</h6></div>
