--- a/src/app/components/directives/stats/hand/efficiency.html
+++ b/src/app/components/directives/stats/hand/efficiency.html
@@ -4,7 +4,7 @@
         <h5><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></h5>
     </div>
 
-    <div class="card-content grey lighten-4 center-align" ng-show="noStat">
+    <div class="card-content white center-align" ng-show="noStat">
         <c3chart bindto-id="gaugeEfficiencyGlobal" 
                  chart-columns="efficiencyGlobalCol" 
                  chart-data="efficiencyGlobalData"
@@ -15,7 +15,7 @@
             <chart-gauge min="0" max="100" width="30"/>
         </c3chart>
     </div>
-    <div class="card-content grey lighten-4 center-align red-text text-lighten-2" ng-hide="noStat">{{'stats.resumeTab.noData' | translate }}</div>
+    <div class="card-content white center-align red-text text-lighten-2" ng-hide="noStat">{{'stats.resumeTab.noData' | translate }}</div>
 </div>
 
 <div class="card blue-grey darken-2" ng-if="bindToId==='gaugeEfficiency9m'">
@@ -23,7 +23,7 @@
         <h5><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></h5>
     </div>
 
-    <div class="card-content grey lighten-4 center-align" ng-show="noStat">
+    <div class="card-content white center-align" ng-show="noStat">
         <c3chart bindto-id="gaugeEfficiency9m" 
                  chart-columns="efficiency9mCol" 
                  chart-data="efficiency9mData"
@@ -34,7 +34,7 @@
             <chart-gauge min="0" max="100" width="30"/>
         </c3chart>
     </div>
-    <div class="card-content grey lighten-4 center-align red-text text-lighten-2" ng-hide="noStat">{{'stats.resumeTab.noData' | translate }}</div>
+    <div class="card-content white center-align red-text text-lighten-2" ng-hide="noStat">{{'stats.resumeTab.noData' | translate }}</div>
 </div>
 
 <div class="card blue-grey darken-2" ng-if="bindToId==='gaugeEfficiency6m'">
@@ -42,7 +42,7 @@
         <h5><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></h5>
     </div>
 
-    <div class="card-content grey lighten-4 center-align" ng-show="noStat">
+    <div class="card-content white center-align" ng-show="noStat">
         <c3chart bindto-id="gaugeEfficiency6m" 
                  chart-columns="efficiency6mCol" 
                  chart-data="efficiency6mData"
@@ -53,7 +53,7 @@
             <chart-gauge min="0" max="100" width="30"/>
         </c3chart>
     </div>
-    <div class="card-content grey lighten-4 center-align red-text text-lighten-2" ng-hide="noStat">{{'stats.resumeTab.noData' | translate }}</div>
+    <div class="card-content white center-align red-text text-lighten-2" ng-hide="noStat">{{'stats.resumeTab.noData' | translate }}</div>
 </div>
 
 <div class="card blue-grey darken-2" ng-if="bindToId==='gaugeEfficiency7m'">
@@ -61,7 +61,7 @@
         <h5><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></h5>
     </div>
 
-    <div class="card-content grey lighten-4 center-align" ng-show="noStat">
+    <div class="card-content white center-align" ng-show="noStat">
         <c3chart bindto-id="gaugeEfficiency7m" 
                  chart-columns="efficiency7mCol" 
                  chart-data="efficiency7mData"
@@ -72,5 +72,5 @@
             <chart-gauge min="0" max="100" width="30"/>
         </c3chart>
     </div>
-    <div class="card-content grey lighten-4 center-align red-text text-lighten-2" ng-hide="noStat">{{'stats.resumeTab.noData' | translate }}</div>
+    <div class="card-content white center-align red-text text-lighten-2" ng-hide="noStat">{{'stats.resumeTab.noData' | translate }}</div>
 </div>
