--- a/src/app/components/directives/stats/hand/sanction.html
+++ b/src/app/components/directives/stats/hand/sanction.html
@@ -1,13 +1,15 @@
-<div class="card small blue-grey darken-2 white-text">
+<div class="card blue-grey darken-2 white-text">
     <div class="card-title center">
-        <span class="white-text"><h5><small>{{'stats.resumeTab.sanctions' | translate }}</small></h5></span>
+        <span class="white-text title"><small>{{'stats.resumeTab.sanctions' | translate }}</small></span>
     </div>
-
+    
+    <!--
     <div class="card-image waves-effect waves-block waves-light">
         <img src="/assets/images/handball/sanction.jpeg">
     </div>
+    -->
 
-    <div class="card-content blue-grey darken-2">
+    <div class="card-content white blue-grey-text text-darken-2">
         <div class="row center">
             <div class="col s4"><h6>{{'stats.sanction.yellowCard' | translate }}</h6></div>
             <div class="col s4"><h6>{{'stats.sanction.excluTempo' | translate }}</h6></div>
