--- a/src/app/modules/sandbox/effective/players/mainPlayer.html
+++ b/src/app/modules/sandbox/effective/players/mainPlayer.html
@@ -15,7 +15,7 @@
     <!-- entete end -->
         
     <div class="row">
-        <div class="col s2 left-align">
+        <div class="col s2 center-align">
             <a href="#/private/addPlayer/{{meta._id}}" class="red-text text-lighten-1">
                 <br>
                 <i class="material-icons md-48">person_add</i>&nbsp;
@@ -34,11 +34,11 @@
         
         <!-- List player -->    
         <ul>
-            <li class="col l3 m6 s12" ng-repeat="player in players | filter:queryPlayer">
+            <li class="col l4 m6 s12" ng-repeat="player in players | filter:queryPlayer">
                 <div class="card white blue-grey-text text-darken-2">
-                    <div class="card-content center-align blue-grey darken-2">
+                    <div class="card-content center-align cardPlayer">
                         <span class="card-title"><a href="#/private/viewPlayer/{{player._id}}" class="title white-text">{{player.firstname}} {{player.name}}</a></span>
-                        <a href="#/private/viewPlayer/{{player._id}}"><avatar person="player" width="'100px'" ></avatar></a>
+                        <a href="#/private/viewPlayer/{{player._id}}"><avatar person="player" width="'120px'" ></avatar></a>
                     </div>
                     <div class="card-content center-align">
                         <span class="card-title"><a href="#/private/viewPlayer/{{player._id}}" class="title">{{player.positionType}}</a></span>
