--- a/src/app/modules/sandbox/effective/team/mainTeam.html
+++ b/src/app/modules/sandbox/effective/team/mainTeam.html
@@ -16,7 +16,7 @@
         
     <div class="row">
 
-        <div class="col s2 left-align">
+        <div class="col s2 center-align">
             <a href="#/private/addTeam/{{false}}" class="red-text text-lighten-1">
                 <br>
                 <i class="material-icons md-48">group_add</i>&nbsp;
