--- a/src/app/index.css
+++ b/src/app/index.css
@@ -23,25 +23,24 @@
 }
 
 .cardStat {
-	background: linear-gradient(10deg, rgba(53,184,136,0.1), rgba(0,113,178,1));
-	overflow: hidden;
+    background: linear-gradient(10deg, rgba(53, 184, 136, 0.1), rgba(0, 113, 178, 1));
+    overflow: hidden;
 }
 
 .cardStatTitle {
-	background: linear-gradient(10deg, rgba(30,100,136,1), rgba(69,90,100,1));
-	overflow: hidden;
+    background: linear-gradient(10deg, rgba(30, 100, 136, 1), rgba(69, 90, 100, 1));
+    overflow: hidden;
 }
 
 .cardPlayer {
-	background: linear-gradient(10deg, rgba(30,100,136,1), rgba(69,90,100,1));
-	overflow: hidden;
+    background: linear-gradient(10deg, rgba(30, 100, 136, 1), rgba(69, 90, 100, 1));
+    overflow: hidden;
 }
 
 .cardTeam {
-	background: linear-gradient(10deg, rgba(229,115,115,1), rgba(198,40,40,1));
-	overflow: hidden;
-} 
-
+    background: linear-gradient(10deg, rgba(229, 115, 115, 1), rgba(198, 40, 40, 1));
+    overflow: hidden;
+}
 
 input[type=text].valid, input[type=text]:focus.valid, input[type=password].valid, input[type=password]:focus.valid, input[type=email].valid, input[type=email]:focus.valid, input[type=url].valid,
 input[type=url]:focus.valid, input[type=time].valid, input[type=time]:focus.valid, input[type=date].valid, input[type=date]:focus.valid, input[type=datetime-local].valid, input[type=datetime-local]:focus.valid,
@@ -557,4 +556,191 @@ table.super-fancy tr.foobar {
 
 #feedback-overview-description-text span {
     background: url(../assets/images/icons.png) -30px -34px no-repeat;
+}
+
+.fs-loader {
+    margin: 0;
+    padding: 0;
+    background: url(../assets/images/background1.jpg) no-repeat center fixed;
+    -webkit-background-size: cover;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+/* http://codepen.io/anon/pen/JGQQwX */
+.fs-loader ul, .fs-loader li {
+    list-style: none;
+    position: relative;
+    padding: 0;
+    margin: 0;
+}
+.show-area {
+    z-index: 999;
+    height: 1.2em;
+    width: 100%;
+    margin: 0 auto;
+    line-height: 100%;
+    color: white;
+    text-align: center;
+    position: absolute;
+    top : 400px;
+    overflow: hidden;
+    font-size: 3em;
+}
+
+.board {
+    margin: 0 auto;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 10em;
+    -webkit-animation: marqee 5s linear infinite;
+    -moz-animation: marqee 5s linear infinite;
+}
+
+.board li {
+    width: 100%;
+    height: 2em;
+    padding: .5em 0;
+    position: relative;
+    left: 0;
+    top: 0;
+    animation: slide linear 1s;
+    animation-iteration-count: infinite;
+    -webkit-animation: slide linear 1s;
+    -webkit-animation-iteration-count: infinite;
+    -moz-animation: slide linear 1s;
+    -moz-animation-iteration-count: infinite;
+}
+@-webkit-keyframes marqee {
+    0% {
+        top: .5em;
+    }
+    100% {
+        top: -9.5em;
+    }
+}
+@-moz-keyframes marqee {
+    0% {
+        top: 0.5em;
+    }
+    100% {
+        top: -9.5em;
+    }
+}
+
+@-webkit-keyframes slide {
+    0% {
+        left: 0;
+        top: 0;
+        opacity: 0;
+        transform: rotate(0deg) scaleX(1) scaleY(1) skewX(0deg) skewY(0deg);
+    }
+    50% {
+        left: 0;
+        top: 0;
+        opacity: 0.75;
+        transform: rotate(0deg) scaleX(1) scaleY(1) skewX(0deg) skewY(0deg);
+    }
+    75% {
+        left: 0;
+        top: .45em;
+        opacity: 1;
+        transform: rotate(0deg) scaleX(1) scaleY(1) skewX(0deg) skewY(0deg);
+    }
+    100% {
+        left: 0;
+        top: 0;
+        opacity: 0;
+        transform: rotate(0deg) scaleX(1) scaleY(1) skewX(0deg) skewY(0deg);
+    }
+}
+
+@-moz-keyframes slide {
+    0% {
+        left: 0;
+        top: 0;
+        opacity: 0;
+        transform: rotate(0deg) scaleX(1) scaleY(1) skewX(0deg) skewY(0deg);
+    }
+    50% {
+        left: 0;
+        top: 0;
+        opacity: 0.75;
+        transform: rotate(0deg) scaleX(1) scaleY(1) skewX(0deg) skewY(0deg);
+    }
+    75% {
+        left: 0;
+        top: .45em;
+        opacity: 1;
+        transform: rotate(0deg) scaleX(1) scaleY(1) skewX(0deg) skewY(0deg);
+    }
+    100% {
+        left: 0;
+        top: 0;
+        opacity: 0;
+        transform: rotate(0deg) scaleX(1) scaleY(1) skewX(0deg) skewY(0deg);
+    }
+}
+@-webkit-keyframes check {
+    0% {
+        height: 0;
+        width: 0;
+    }
+    25% {
+        height: 0;
+        width: 10px;
+    }
+    50% {
+        height: 20px;
+        width: 10px;
+    }
+}
+@-moz-keyframes check {
+    0% {
+        height: 0;
+        width: 0;
+    }
+    25% {
+        height: 0;
+        width: 10px;
+    }
+    50% {
+        height: 20px;
+        width: 10px;
+    }
+}
+@-ms-keyframes check {
+    0% {
+        height: 0;
+        width: 0;
+    }
+    25% {
+        height: 0;
+        width: 10px;
+    }
+    50% {
+        height: 20px;
+        width: 10px;
+    }
+}
+@keyframes check {
+    0% {
+        height: 0;
+        width: 0;
+    }
+    25% {
+        height: 0;
+        width: 10px;
+    }
+    50% {
+        height: 20px;
+        width: 10px;
+    }
 }
